--- a/Book Store/appsettings.json
+++ b/Book Store/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Database=BookStore;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=BookStore;Trusted_Connection=True;"
   }
 }
